--- a/notebooks/03_otimizacao_modelo.ipynb
+++ b/notebooks/03_otimizacao_modelo.ipynb
@@ -769,7 +769,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -783,7 +783,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
