fix: ajustes nos notebooks

--- a/notebooks/01_eda_preprocess.ipynb
+++ b/notebooks/01_eda_preprocess.ipynb
@@ -45,27 +45,13 @@
     }
    ],
    "source": [
-    "# ======================================================================\n",
-    "# 01 - EDA + PREPROCESSAMENTO DO CSV DE ESTAÇÃO METEOROLÓGICA\n",
-    "# ======================================================================\n",
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# -----------------------------------------------------------------------------\n",
-    "# 1) CARREGAR CSV BRUTO\n",
-    "# -----------------------------------------------------------------------------\n",
-    "\n",
     "df_raw = pd.read_csv(\"data/generatedBy_react-csv.csv\", sep=\";\")\n",
     "print(\"Linhas carregadas:\", len(df_raw))\n",
     "df_raw.head()\n",
-    "\n",
-    "# -----------------------------------------------------------------------------\n",
-    "# 2) AJUSTAR TIPOS E PADRONIZAR COLUNAS\n",
-    "# -----------------------------------------------------------------------------\n",
-    "\n",
-    "# Converte colunas numéricas que vieram como \"object\"\n",
     "cols_to_numeric = [\n",
     "    'Temp. Ins. (C)', 'Umi. Ins. (%)', 'Vel. Vento (m/s)',\n",
     "    'Radiacao (KJ/m²)', 'Chuva (mm)'\n",
@@ -73,14 +59,6 @@
     "\n",
     "for col in cols_to_numeric:\n",
     "    df_raw[col] = pd.to_numeric(df_raw[col].astype(str).str.replace(\",\", \".\"), errors=\"coerce\")\n",
-    "\n",
-    "# -----------------------------------------------------------------------------\n",
-    "# 3) CRIAR DATETIME CORRETO\n",
-    "# -----------------------------------------------------------------------------\n",
-    "\n",
-    "# -----------------------------------------------------------------------------\n",
-    "# 3) CORREÇÃO DO HORÁRIO (formato INMET “HHMM”)\n",
-    "# -----------------------------------------------------------------------------\n",
     "\n",
     "def fix_hora_inmet(h):\n",
     "    \"\"\"\n",
@@ -90,21 +68,13 @@
     "    h = str(h).zfill(4)  # garante 4 dígitos\n",
     "    return h[:2] + \":\" + h[2:]\n",
     "\n",
-    "# Converter\n",
     "df_raw[\"Hora_str\"] = df_raw[\"Hora (UTC)\"].apply(fix_hora_inmet)\n",
-    "\n",
-    "# Criar datetime final\n",
     "df_raw[\"datetime\"] = pd.to_datetime(\n",
     "    df_raw[\"Data\"] + \" \" + df_raw[\"Hora_str\"],\n",
     "    dayfirst=True\n",
     ")\n",
     "\n",
     "df_raw = df_raw.set_index(\"datetime\")\n",
-    "\n",
-    "\n",
-    "# -----------------------------------------------------------------------------\n",
-    "# 4) SELECIONAR APENAS AS COLUNAS ÚTEIS PARA O MODELO\n",
-    "# -----------------------------------------------------------------------------\n",
     "\n",
     "df = df_raw[[\n",
     "    \"Temp. Ins. (C)\",\n",
@@ -115,18 +85,9 @@
     "]].copy()\n",
     "\n",
     "df.columns = [\"Temp\", \"Umi\", \"Vento\", \"Rad\", \"Chuva\"]\n",
-    "\n",
-    "# -----------------------------------------------------------------------------\n",
-    "# 5) TRATAMENTO DE FALTANTES E INTERPOLAÇÃO\n",
-    "# -----------------------------------------------------------------------------\n",
-    "\n",
-    "df = df.resample(\"H\").mean()          # Garantir amostragem horária\n",
-    "df = df.interpolate(method=\"time\")    # Suavizar falhas\n",
-    "df = df.ffill().bfill()               # Garantir preenchimento total\n",
-    "\n",
-    "# -----------------------------------------------------------------------------\n",
-    "# 6) EDA BÁSICA\n",
-    "# -----------------------------------------------------------------------------\n",
+    "df = df.resample(\"H\").mean()\n",
+    "df = df.interpolate(method=\"time\")\n",
+    "df = df.ffill().bfill()\n",
     "\n",
     "df.describe()\n",
     "\n",
@@ -135,11 +96,6 @@
     "\n",
     "df[\"Rad\"].plot(figsize=(12,4), title=\"Radiação Solar\")\n",
     "plt.show()\n",
-    "\n",
-    "# -----------------------------------------------------------------------------\n",
-    "# 7) FEATURE ENGINEERING (LAGS + CICLOS DE TEMPO)\n",
-    "# -----------------------------------------------------------------------------\n",
-    "\n",
     "df_model = df.copy()\n",
     "\n",
     "lags = [1, 2, 3, 6, 12, 24]\n",
@@ -149,34 +105,21 @@
     "    df_model[f\"Umi_lag_{lag}\"] = df_model[\"Umi\"].shift(lag)\n",
     "    df_model[f\"Vento_lag_{lag}\"] = df_model[\"Vento\"].shift(lag)\n",
     "    df_model[f\"Rad_lag_{lag}\"] = df_model[\"Rad\"].shift(lag)\n",
-    "\n",
-    "# Features cíclicas\n",
+    "    \n",
     "df_model[\"hour\"] = df_model.index.hour\n",
     "df_model[\"hour_sin\"] = np.sin(2*np.pi * df_model[\"hour\"]/24)\n",
     "df_model[\"hour_cos\"] = np.cos(2*np.pi * df_model[\"hour\"]/24)\n",
-    "\n",
-    "# Target — prever temperatura 1h à frente\n",
     "df_model[\"Temp_future_1h\"] = df_model[\"Temp\"].shift(-1)\n",
-    "\n",
-    "# Remover NaN dos lags e do target\n",
     "df_model = df_model.dropna()\n",
     "\n",
     "print(\"Linhas finais para modelagem:\", len(df_model))\n",
     "df_model.head()\n",
-    "\n",
-    "# -----------------------------------------------------------------------------\n",
-    "# 8) SEPARAÇÃO PARA TREINO/TESTE\n",
-    "# -----------------------------------------------------------------------------\n",
     "\n",
     "train = df_model.iloc[:-200]\n",
     "test  = df_model.iloc[-200:]\n",
     "\n",
     "print(\"Treino:\", train.shape)\n",
     "print(\"Teste:\", test.shape)\n",
-    "\n",
-    "# -----------------------------------------------------------------------------\n",
-    "# 9) MATRIZ DE FEATURES / TARGET\n",
-    "# -----------------------------------------------------------------------------\n",
     "\n",
     "X_train = train.drop(columns=[\"Temp_future_1h\"])\n",
     "y_train = train[\"Temp_future_1h\"]\n",
