--- a/notebooks/02_modelagem.ipynb
+++ b/notebooks/02_modelagem.ipynb
@@ -55,9 +55,6 @@
     }
    ],
    "source": [
-    "# ==============================================================\n",
-    "# 1) IMPORTS\n",
-    "# ==============================================================\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -68,27 +65,17 @@
     "import mlflow\n",
     "import mlflow.sklearn\n",
     "import os\n",
-    "import sqlalchemy # Novo import para conexão com o DB\n",
-    "import shutil # NOVO: Para limpar pastas de modelo local (necessário se o log_model falhar)\n",
+    "import sqlalchemy\n",
+    "import shutil\n",
     "\n",
-    "# ==============================================================\n",
-    "# 2) CARREGANDO DADOS DA PIPELINE (POSTGRESQL)\n",
-    "# ==============================================================\n",
-    "# A URL deve ser 'db' se você estiver rodando no Jupyter Notebook dentro do Docker Compose\n",
     "DB_URL = \"postgresql://admin:secret@db:5432/weather_db\" \n",
     "TABLE_NAME = \"weather_measurements\"\n",
     "\n",
     "try:\n",
     "    engine = sqlalchemy.create_engine(DB_URL)\n",
-    "    \n",
-    "    # Lendo todos os dados da tabela preenchida pela sua pipeline\n",
     "    df_raw = pd.read_sql(f\"SELECT * FROM {TABLE_NAME} ORDER BY timestamp\", engine)\n",
-    "    \n",
-    "    # Convertendo a coluna 'timestamp' para datetime e definindo como índice\n",
     "    df_raw['timestamp'] = pd.to_datetime(df_raw['timestamp'])\n",
     "    df_raw = df_raw.set_index('timestamp')\n",
-    "    \n",
-    "    # Renomeando as colunas para o modelo (o nome do DB é snake_case)\n",
     "    df_raw.rename(columns={\n",
     "        'temperature': 'Temp', \n",
     "        'humidity': 'Umi', \n",
@@ -96,8 +83,6 @@
     "        'radiation': 'Rad', \n",
     "        'precipitation': 'Chuva'\n",
     "    }, inplace=True)\n",
-    "    \n",
-    "    # Se houver timestamps duplicados, mantenha o último registro\n",
     "    df_raw = df_raw.loc[~df_raw.index.duplicated(keep='last')]\n",
     "    \n",
     "    print(f\"✔️ Dados lidos do PostgreSQL. Total de registros: {len(df_raw)}\")\n",
@@ -105,56 +90,27 @@
     "except Exception as e:\n",
     "    print(f\"❌ ERRO ao conectar ou ler do PostgreSQL: {e}\")\n",
     "    print(\"Verifique se o container 'db' e 'fastapi' estão rodando.\")\n",
-    "    # Usar um CSV de fallback apenas para fins de demonstração, se a conexão falhar\n",
     "    if os.path.exists(\"data/dados_tratados.csv\"):\n",
     "        print(\"Usando fallback CSV...\")\n",
     "        df_raw = pd.read_csv(\"data/dados_tratados.csv\", index_col=0, parse_dates=True)\n",
-    "        df_raw.columns = ['Temp', 'Umi', 'Vento', 'Rad', 'Chuva'] # Reajusta as colunas\n",
+    "        df_raw.columns = ['Temp', 'Umi', 'Vento', 'Rad', 'Chuva']\n",
     "    else:\n",
     "        raise ConnectionError(\"Falha crítica: Não foi possível conectar ao DB e o CSV de fallback não existe.\")\n",
     "\n",
-    "\n",
-    "# ==============================================================\n",
-    "# 3) SELECIONAR SOMENTE O NECESSÁRIO (JÁ FEITO NA LEITURA)\n",
-    "# ==============================================================\n",
-    "# A ingestão já garantiu que temos os dados limpos e com o nome de coluna ajustado:\n",
-    "# 'Temp', 'Umi', 'Vento', 'Rad', 'Chuva'\n",
     "df = df_raw[['Temp', 'Umi', 'Vento', 'Rad', 'Chuva']].copy()\n",
-    "\n",
-    "# ==============================================================\n",
-    "# 4) INTERPOLAÇÃO (RE-SAMPLING E INTERPOLAÇÃO, SE NECESSÁRIO)\n",
-    "# ==============================================================\n",
-    "# O Reindexamento para frequência 'H' (horária) foi removido pois estava criando\n",
-    "# muitas linhas vazias (NaNs) quando o dataset do DB era muito esparso (poucos pontos),\n",
-    "# fazendo com que o dataset de modelagem final ficasse vazio.\n",
-    "# Agora, apenas fazemos interpolação nos pontos existentes.\n",
     "df = df.interpolate(method=\"time\")\n",
-    "df[\"Rad\"] = df[\"Rad\"].fillna(0) # Radiação sem leitura vira zero\n",
-    "df = df.ffill().bfill() # Última garantia\n",
+    "df[\"Rad\"] = df[\"Rad\"].fillna(0)\n",
+    "df = df.ffill().bfill()\n",
     "\n",
     "print(\"\\nApós limpeza e interpolação de dados (sem reindexamento forçado):\") # Alterei a mensagem para refletir a mudança\n",
     "print(df.head())\n",
     "\n",
-    "# ==============================================================\n",
-    "# AÇÃO CRÍTICA: VERIFICAR E PREENCHER QUAISQUER NANs REMANESCENTES\n",
-    "# ==============================================================\n",
     "if df.isnull().values.any():\n",
-    "    # Isso só deve acontecer se houver NaNs no início/fim que o bfill/ffill não resolveu\n",
     "    print(f\"🚨 AVISO CRÍTICO: Encontrado NaNs em {df.isnull().sum().sum()} células após a limpeza.\")\n",
-    "    # Preenchimento final de NaNs para evitar que o dropna() no FE remova TUDO\n",
     "    df = df.fillna(0)\n",
     "    print(\"✅ NaNs restantes preenchidos com 0 para prosseguir com a modelagem.\")\n",
     "\n",
     "print(f\"Tamanho do DF após limpeza rigorosa: {len(df)} linhas.\")\n",
-    "\n",
-    "# ==============================================================\n",
-    "# 5) SALVAR DATASET TRATADO (NÃO É MAIS NECESSÁRIO)\n",
-    "# ==============================================================\n",
-    "# Este passo foi removido, pois agora a fonte é o DB.\n",
-    "\n",
-    "# ==============================================================\n",
-    "# 6) FEATURE ENGINEERING\n",
-    "# ==============================================================\n",
     "df_model = df.copy()\n",
     "\n",
     "lags = [1, 2, 3, 6, 12, 24]\n",
@@ -167,36 +123,23 @@
     "df_model[\"hour\"] = df_model.index.hour\n",
     "df_model[\"hour_sin\"] = np.sin(2 * np.pi * df_model[\"hour\"] / 24)\n",
     "df_model[\"hour_cos\"] = np.cos(2 * np.pi * df_model[\"hour\"] / 24)\n",
-    "\n",
-    "# Target → previsão para 1 hora à frente\n",
     "df_model[\"Temp_future_1h\"] = df_model[\"Temp\"].shift(-1)\n",
-    "\n",
-    "# LÓGICA: Manter apenas as colunas de lag, ciclo e target, descartando as colunas originais\n",
-    "# que não são usadas como features ou podem causar problemas de NaN\n",
     "df_model.drop(columns=['Temp', 'Umi', 'Vento', 'Rad', 'Chuva', 'hour'], inplace=True)\n",
     "\n",
-    "df_model = df_model.dropna() # Agora, só descarta linhas que faltam lags (primeiras 24) ou o target (última)\n",
+    "df_model = df_model.dropna()\n",
     "\n",
     "print(\"\\nShape final do dataset de modelagem:\", df_model.shape)\n",
-    "\n",
-    "# ==============================================================\n",
-    "# 7) SEPARAÇÃO TREINO / TESTE\n",
-    "# ==============================================================\n",
     "X = df_model.drop(columns=[\"Temp_future_1h\"])\n",
     "y = df_model[\"Temp_future_1h\"]\n",
     "\n",
-    "# DEFINIÇÃO DO TAMANHO DE TESTE (Mais robusto para séries temporais pequenas)\n",
-    "TEST_SIZE_PERCENTAGE = 0.2 # Padrão\n",
-    "MIN_TEST_ROWS = 5          # Mínimo de linhas para o teste\n",
+    "TEST_SIZE_PERCENTAGE = 0.2\n",
+    "MIN_TEST_ROWS = 5\n",
     "\n",
-    "# Garantindo que o dataset de modelagem não está vazio antes de tentar dividir\n",
-    "if len(X) <= (lags[-1] + MIN_TEST_ROWS): \n",
-    "    # O mínimo necessário é o maior lag (24) + pelo menos 5 linhas de teste + 1 linha de target\n",
+    "if len(X) <= (lags[-1] + MIN_TEST_ROWS):\n",
     "    raise ValueError(f\"Falha crítica: O dataset de modelagem está muito pequeno ({len(X)} linhas). Não é possível garantir a divisão (mínimo de {lags[-1] + MIN_TEST_ROWS + 1} linhas necessárias). Verifique a extensão dos dados no DB.\")\n",
     "\n",
-    "# Decide se usa porcentagem ou número absoluto de linhas\n",
     "test_size_val = TEST_SIZE_PERCENTAGE\n",
-    "if len(X) < 50: # Se o total for pequeno, usamos o número absoluto de linhas para teste\n",
+    "if len(X) < 50:\n",
     "    test_size_val = MIN_TEST_ROWS\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
@@ -207,36 +150,17 @@
     "print(\"Treino:\", X_train.shape)\n",
     "print(\"Teste:\", X_test.shape)\n",
     "\n",
-    "# ==============================================================\n",
-    "# 8) FUNÇÃO DE TREINO + MLflow\n",
-    "# ==============================================================\n",
-    "def treinar_modelo(nome, modelo):\n",
-    "\n",
-    "    # Certifique-se de que o MLflow está configurado para o servidor\n",
-    "    # (Geralmente, isso é configurado externamente via variáveis de ambiente, \n",
-    "    # ou você pode configurar o tracking URI aqui: mlflow.set_tracking_uri(\"http://mlflow:5000\"))\n",
-    "    \n",
+    "def treinar_modelo(nome, modelo): \n",
     "    with mlflow.start_run(run_name=nome):\n",
-    "\n",
-    "        # Treinar\n",
     "        modelo.fit(X_train, y_train)\n",
     "        pred = modelo.predict(X_test)\n",
-    "\n",
-    "        # Métricas\n",
     "        rmse = mean_squared_error(y_test, pred, squared=False)\n",
     "        mae = mean_absolute_error(y_test, pred)\n",
     "\n",
     "        mlflow.log_metric(\"rmse\", rmse)\n",
     "        mlflow.log_metric(\"mae\", mae)\n",
     "\n",
-    "        # ================================\n",
-    "        # LOGAR MODELO (VOLTANDO AO save_model + log_artifacts com limpeza local)\n",
-    "        # O log_model estava gerando erro 404 por falta de suporte ao Model Registry\n",
-    "        # no endpoint específico.\n",
-    "        # ================================\n",
     "        path = f\"{nome}_model\"\n",
-    "        \n",
-    "        # 1. LIMPAR PASTA LOCAL (Impede o erro de pasta pré-existente)\n",
     "        if os.path.exists(path):\n",
     "            try:\n",
     "                shutil.rmtree(path)\n",
@@ -244,32 +168,20 @@
     "            except OSError as e:\n",
     "                print(f\"Erro ao remover a pasta {path}: {e}. Tentando salvar mesmo assim.\")\n",
     "\n",
-    "        # 2. SALVAR MODELO LOCALMENTE\n",
     "        mlflow.sklearn.save_model(modelo, path)      \n",
-    "        \n",
-    "        # 3. ENVIAR OS ARTEFATOS PARA O MLFLOW\n",
     "        mlflow.log_artifacts(path, artifact_path=nome) \n",
-    "        # ================================\n",
-    "\n",
     "        print(f\"\\n===== {nome} =====\")\n",
     "        print(\"RMSE:\", rmse)\n",
     "        print(\"MAE:\", mae)\n",
     "\n",
     "        return pred\n",
     "\n",
-    "\n",
-    "# ==============================================================\n",
-    "# 9) RODAR MODELOS\n",
-    "# ==============================================================\n",
     "pred_lr = treinar_modelo(\"LinearRegression\", LinearRegression())\n",
     "pred_rf = treinar_modelo(\"RandomForest\", RandomForestRegressor(\n",
     "    n_estimators=200,\n",
     "    random_state=42\n",
     "))\n",
     "\n",
-    "# ==============================================================\n",
-    "# 10) PLOT COMPARAÇÃO VISUAL\n",
-    "# ==============================================================\n",
     "plt.figure(figsize=(12,4))\n",
     "plt.plot(y_test.values[:200], label=\"Real\")\n",
     "plt.plot(pred_rf[:200], label=\"RandomForest\")\n",
