--- a/notebooks/01_eda_preprocess.ipynb
+++ b/notebooks/01_eda_preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "eef79c20-9913-4db5-bc34-041af875452f",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
     "    Converte hora INMET (ex: 100 -> 01:00, 1300 -> 13:00, 30 -> 00:30)\n",
     "    para string HH:MM.\n",
     "    \"\"\"\n",
-    "    h = str(h).zfill(4)  # garante 4 dígitos\n",
+    "    h = str(h).zfill(4)  \n",
     "    return h[:2] + \":\" + h[2:]\n",
     "\n",
     "df_raw[\"Hora_str\"] = df_raw[\"Hora (UTC)\"].apply(fix_hora_inmet)\n",
@@ -129,14 +129,6 @@
     "\n",
     "print(\"OK — Dataset preparado para modelagem!\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a8dffb7-747b-42ad-b459-e892ce4434d1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
