--- a/notebooks/03_otimizacao_modelo.ipynb
+++ b/notebooks/03_otimizacao_modelo.ipynb
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "4ddf8a0d",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
     "    'min_samples_split': [2, 5, 10, 15],               # Mínimo de amostras para split\n",
     "    'min_samples_leaf': [1, 2, 4, 6],                  # Mínimo de amostras por folha\n",
     "    'max_features': ['sqrt', 'log2', 0.3, 0.5, 0.7],   # Features por split\n",
-    "    'bootstrap': [True, False]                          # Usar bootstrap\n",
+    "    'bootstrap': [True, False]                          # Usando bootstrap\n",
     "}\n",
     "\n",
     "print(\"🔧 Espaço de Hiperparâmetros definido:\")\n",
